--- a/index.html
+++ b/index.html
@@ -108,15 +108,6 @@
         </div>
     </header>
 
-    <div class="fixed-left-info">
-        <p>
-            <a href="mailto:garrenbenaya74@gmail.com">Email: garrenbenaya74@gmail.com</a>
-        </p>
-        <p>
-            <a href="tel:+6282116341828">Telepon: +62 821-1634-1828</a>
-        </p>
-    </div>
-
     <main class="flex flex-col items-center justify-center min-h-screen" data-aos="fade-up">
         <h1 class="text-4xl md:text-5xl font-bold mb-4 mr-48 text-white">Hi, I'm <span>Garren Benaya</span>, Front-End <br>Developer Based In Jakarta, Indonesia.</h1>
         <h2 data-aos="fade-in" data-aos-delay="500" data-aos-duration="1200">
@@ -128,35 +119,73 @@
         </h2>
     </main>
     
-    <section id="about" class="py-20 bg-black text-white" data-aos="fade-right">
-        <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold mb-5">About Me</h2>
-            <p class="text-lg">I am a passionate Front-End Developer...</p>
-        </div>
-    </section>
+    <section id="about" class="py-20 bg-black text-white">
+        <h1 class="section-title aos-init aos-animate text-4xl font-bold mb-10 text-center" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1200">About Me</h1>
+        <div class="about-wrap aos-init aos-animate flex flex-col md:flex-row items-center justify-center gap-10" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1200">
+          <div class="about-img">
+            <img src="images/me.jpg" alt="" class="rounded-full w-48 h-48">
 
-    <section id="skills" class="py-20 bg-black text-white" data-aos="fade-left">
-        <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold mb-5">Skills</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
-                <div class="p-5 bg-black shadow rounded-lg">
-                    <h3 class="text-2xl font-bold mb-3">HTML</h3>
-                    <p>Proficient in creating structured and semantic HTML.</p>
-                </div>
-                <div class="p-5 bg-black shadow rounded-lg">
-                    <h3 class="text-2xl font-bold mb-3">CSS</h3>
-                    <p>Skilled in crafting responsive and visually appealing designs.</p>
-                </div>
-                <div class="p-5 bg-black shadow rounded-lg">
-                    <h3 class="text-2xl font-bold mb-3">JavaScript</h3>
-                    <p>Experienced in adding interactivity...</p>
-                </div>
+          </div>
+          <div class="about-desc text-center md:text-left">
+            <p class="copyright mb-4">
+              I am a highly motivated and enthusiastic software engineer with a
+              specialization in frontend development. With a passion for
+              creating visually appealing and user-friendly web experiences.
+            </p>
+            <p class="copyright mb-4">
+              I currently working with Node and JavaScript ecosystems. However,
+              I am always eager to expand my knowledge and learn new languages
+              and technologies.
+            </p>
+            <p class="copyright mb-4">
+              With strong problem-solving skills and a drive to continuously
+              improve, I am confident in my ability to meet any challenge and
+              deliver outstanding results.
+            </p>
+            <p class="copyright mb-4">
+              Here are a few main technologies I've been working with recently :
+            </p>
+            <div class="about-info-grid">
+              <div class="about-list">
+                <ul class="grid grid-cols-2 gap-4">
+                  <li>
+                    <i class="fa fa-code"></i>
+                    <span>HTML &amp; CSS</span>
+                  </li>
+                  <li>
+                    <i class="fa fa-code"></i>
+                    <span>Javascript</span>
+                  </li>
+                  <li>
+                    <i class="fa fa-code"></i>
+                    <span>Fotografi</span>
+                  </li> 
+                  <li>
+                    <i class="fa fa-code"></i>
+                    <span>Adobe Premier</span>
+                  </li>
+                  <li>
+                    <i class="fa fa-code"></i>
+                    <span>Video Editor</span>
+                  </li> 
+                  <li>
+                    <i class="fa fa-code"></i>
+                    <span>Python</span>
+                  </li> 
+                  <li>
+                    <i class="fa fa-code"></i>
+                    <span>PHP</span>
+                  </li> 
+                </ul>
+              </div>
             </div>
+             <a href="#"><button class="button mt-4">Download CV</span></button></a>
+          </div>
         </div>
     </section>
 
     <section id="projects" class="py-20 bg-black text-white" data-aos="fade-up">
-        <div class="container mx-auto px-6">
+        <div class="container ml-52 px-6 min-h-screen">
             <h2 class="text-4xl font-bold mb-5">Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
                 <div class="p-5 bg-gray-800 shadow rounded-lg">
@@ -176,7 +205,7 @@
     </section>
 
     <section id="contact" class="py-20 bg-black text-white" data-aos="fade-up">
-        <div class="container mx-auto px-6">
+        <div class="container ml-52 px-6">
             <h2 class="text-4xl font-bold mb-5">Contact</h2>
             <p>If you would like to get in touch...</p>
             <form action="#" method="POST">
@@ -196,6 +225,15 @@
             </form>
         </div>
     </section>
+    <div class="fixed-left-info">
+        <p>
+            <a href= "mailto:garrenbenaya74@gmail.com">garrenbenaya74@gmail.com </a>
+        </p>
+        <p>
+            <a href="https://wa.me/+6282116341828">Telepon: +62 821-1634-1828</a>
+        </p>
+    </div>
+
     
     <footer class="copyright py-4 bg-black text-white text-center">
         <p>Made by Garren Benaya</p>
