--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
     <section id="about" class="py-20 bg-black text-white">
         <h1 class="section-title text-4xl font-bold mb-10 text-center" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1200">About Me</h1>
         <div class="about-wrap flex flex-col md:flex-row items-center justify-center gap-10" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1200">
-            <div class="about-img">
-                <img src="profil.jpg" alt="" class="rounded-full w-48 h-48">
+            <div class="about-img p-8 mb-52">
+                <img src="profil.png" alt="" class="rounded-full w-52 h-52">
             </div>
             <div class="about-desc text-center md:text-left">
                 <p class="mb-4">
