--- a/index.html
+++ b/index.html
@@ -218,7 +218,15 @@
                     <ul>
                         <li>
                             <i class="fa fa-link"></i>
-                            <a href="http://DayourTeam.github.io" target="_blank">My first project</a>
+                            <a href="http://DayourTeam.github.io" target="_blank">My First Project</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-link"></i>
+                            <a href="https://www.figma.com/design/9BbmXi0ojRQFZVo8DOwHyO/Untitled?node-id=0-1&t=dcMrINN382ClmucQ-1" target="_blank">My First Design Project with Figma</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-link"></i>
+                            <a href="https://www.figma.com/design/vC3wzhQVasSRhaBLAUGARn/nyampah?node-id=0-1&t=e57WBpdIplaTCfP4-1" target="_blank">UI/UX Design Competition Project</a>
                         </li>
 
                     </ul>
@@ -239,7 +247,8 @@
                 <div class="contact-box" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1200">
                     <i class="fa fa-phone"></i>
                     <h5>Phone</h5>
-                    <p>+62 821-1634-1828</p>
+                    <p><a href="https://wa.me/+6282116341828">+62 821-1634-1828</a>
+                    </p>
                 </div>
                 <div class="contact-box" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1200">
                     <i class="fa fa-envelope-o"></i>
