--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <div class="contact-box" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1200">
                     <i class="fa fa-phone"></i>
                     <h5>Phone</h5>
-                    <p><a href="https://wa.me/+6282116341828">+62 821-1634-1828</a>
+                    <p><a href="https://wa.me/+6282116341828" style="color: gray;">+62 821-1634-1828</a>
                     </p>
                 </div>
                 <div class="contact-box" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1200">
