--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <a href="https://wa.me/+6282116341828">
                 <p style="color: white;">Telepon : +62 821-1634-1828</p>
             </a>
+            <a href="https://github.com/GerenP">
+                <p style="color: white;">My Github</p>
+            </a>
         </div>
 
         <!-- Header right info -->
@@ -151,7 +154,7 @@
                                 </li>
                                 <li>
                                     <i class="fa fa-code"></i>
-                                    <span>Adobe Premier</span>
+                                    <span>Laravel</span>
                                 </li>
                                 <li>
                                     <i class="fa fa-code"></i>
@@ -195,7 +198,7 @@
                     </li>
                     <li>
                         <i class="fa fa-check"></i>
-                        Editor Video
+                        Basic Data
                     </li>
                     <li>
                         <i class="fa fa-check"></i>
@@ -227,6 +230,10 @@
                         <li>
                             <i class="fa fa-link"></i>
                             <a href="https://www.figma.com/design/vC3wzhQVasSRhaBLAUGARn/nyampah?node-id=0-1&t=e57WBpdIplaTCfP4-1" target="_blank">UI/UX Design Competition Project</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-link"></i>
+                            <a href="https://github.com/GerenP" target="_blank">Want to see more?</a>
                         </li>
 
                     </ul>
