--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="Garren Benaya CV.pdf"><button class="btn-primary">Download CV<span class="round" /></button></a>
+                    <a href="CV Garren Benaya.pdf"><button class="btn-primary">Download CV<span class="round" /></button></a>
                 </div>
             </div>
         </section>
